--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
